Fix advertisement not showing

--- a/assets/css/scss/infinia.scss
+++ b/assets/css/scss/infinia.scss
@@ -14,8 +14,9 @@ body {
 }
 
 #about {
-  #ad {
+  .ad {
     font-size: 200%;
     margin: 150% 150% 150% 150%
+
   }
 }
